fixed main overflowing and causing whitespace near footer

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -456,9 +456,8 @@ aside {
 main {
     display: flex;
     justify-content: center;
-}
-main {
-    width: 100%
+    width: 100%;
+    box-sizing: content-box;
 }
 @media (max-width: 1100px) {
     main {
